# spr26-Team-13

./: .env.example  .gitignore  DONE.txt  README.md  charlie-test.txt  gavin.txt  pyproject.toml
.devcontainer/: devcontainer.json
desktop/: README.md  index.html  package-lock.json  package.json
desktop/src/: App.tsx  main.tsx
docs/: api-contracts.md  architecture.md  team-plan.md  voice-coach-demo.md
ios/: README.md  app.jsx  assistant.js  auth.js  data.js  index.html  ingestion.js  ios-frame.jsx  native-bridge.js  screens-add-program.jsx  screens-calendar.jsx  screens-main.jsx  screens-past-workout.jsx  screens-profile.jsx  screens-program-detail.jsx  screens-signup.jsx  supabase.js  tokens.css  ui.jsx
misc/: Gym Workout Tracking & Training Experience Survey-2.csv  Gym Workout Tracking & Training Experience Survey.csv  alexander.txt  chapman.txt
native-ios/: README.md
programs/: Phase3.xlsx
src/: __init__.py  main.py
src/app/: README.md
src/assistant/: __init__.py  backend.py  init.py  mock_db.py  models.py  prompts.py  service.py  supabase_client.py  tools.py  voice.py
src/contracts/: __init__.py  coaching.py  common.py  device.py  events.py  logging.py  program.py  session.py
src/export/: README.md
src/glasses/: README.md
src/ingestion/: README.md  __init__.py  llm_normalizer.py  models.py  service.py
src/runtime/: README.md  progression.py  rest_timer.py  session_engine.py
src/sensing/: README.md  manual_input.py
src/shared/: __init__.py  exercise_catalog.py  validators.py
supabase/: config.toml  seed_demo_callum.sql
(+80 files in other folders)
