[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spr26-team-13"
version = "0.1.0"
description = "AR glasses training assistant scaffold for Team 13."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "docling>=2.91,<3.0",
  "flask>=2.2,<3.0",
  "openai>=2.32,<3.0",
  "pydantic>=2.7,<3.0",
  "pillow>=11.1,<13.0",
  "pillow-heif>=1.3,<2.0",
  "python-dotenv>=1.0,<2.0",
  "numpy>=1.26,<3.0",
  "opencv-python>=4.9,<5.0",
  "Pillow>=10.0,<12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
